--- a/ADMFacturar/Views/Marketing/GCIndex.cshtml
+++ b/ADMFacturar/Views/Marketing/GCIndex.cshtml
@@ -39,16 +39,21 @@
                         @foreach (var grupoCorreo in Model)
                         {
                             <tr class="even:bg-gray-700 hover:bg-gray-600">
-                            <td class="py-3 px-4 text-center">@grupoCorreo.Name</td>
-                            <td class="py-3 px-4 text-center">@grupoCorreo.Correos</td>
-                            <td class="py-3 px-4 text-center">
-                                <button class="bg-blue-500 text-white px-2 py-1 rounded hover:bg-blue-600" title="Editar Grupo de Correo" onclick="ActuVarGC('@grupoCorreo.Id')">
-                                    <i class="fa-solid fa-edit"></i>
-                                </button>
-                                <button class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" title="Eliminar Grupo de Correo">
-                                    <i class="fa-solid fa-trash"></i>
-                                </button>
-                            </td>
+                                <td class="py-3 px-4 text-center">@grupoCorreo.Name</td>
+                                <td class="py-3 px-4 text-center">@grupoCorreo.Correos</td>
+                                <td class="py-3 px-4 text-center">
+                                    <div class="flex justify-center space-x-2">
+                                        <button class="bg-blue-500 text-white px-2 py-1 rounded hover:bg-blue-600" title="Editar Grupo de Correo" onclick="ActuVarGC('@grupoCorreo.Id')">
+                                            <i class="fa-solid fa-edit"></i>
+                                        </button>
+                                        <form asp-action="EliminarGC" method="post" class="desactivar-form">
+                                        <input type="hidden" name="Id" value="@grupoCorreo.Id"/>
+                                            <button type="submit" class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" title="Eliminar Grupo de Correo">
+                                                <i class="fa-solid fa-trash"></i>
+                                            </button>
+                                        </form>
+                                    </div>
+                                </td>
                             </tr>
                         }
                     }
@@ -75,6 +80,7 @@
 </div>
 
 <!--                  Final Modales                        -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
     /*funcion encargada de abrir el modal
         incorporación 6/10/24 por Joseth Araya */
@@ -139,5 +145,63 @@
                 });
             });
     }
+
+    // <!-- Inicio Validación botón desactivar -->
+    document.querySelectorAll('.desactivar-form').forEach(function (form) {
+        form.addEventListener('submit', function (event) {
+            event.preventDefault(); // Detener el envío normal del formulario
+
+            // Obtener la PK del Articulo desde el formulario
+            var Id = this.querySelector('input[name="Id"]').value;
+            console.log('Datos del ID:', Id);
+            // Mostrar mensaje de confirmación con SweetAlert2
+            Swal.fire({
+                title: '¿Está seguro?',
+                text: "¿Desea Eliminar este Grupo de Correos?",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, Eliminar',
+                cancelButtonText: 'Cancelar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Enviar la solicitud para desactivar el articulo
+                    fetch(`/Marketing/EliminarGC?ID=${Id}`, {
+                        method: 'POST'
+                    })
+                        .then(response => {
+                            if (response.ok) {
+                                // Mostrar mensaje de éxito con SweetAlert2
+                                Swal.fire({
+                                    icon: 'success',
+                                    title: 'Grupo de Correos Eliminado Correctamente',
+                                    showConfirmButton: true,
+                                    confirmButtonColor: '#3085d6',
+                                    confirmButtonText: 'OK'
+                                }).then((result) => {
+                                    // Recargar la página después de desactivar
+                                    location.reload();
+                                });
+                            } else {
+                                throw new Error('Error al eliminado el Grupo de Correos');
+                            }
+                        })
+                        .catch(error => {
+                            // Mostrar mensaje de error con SweetAlert2
+                            Swal.fire({
+                                icon: 'error',
+                                title: 'Error',
+                                text: error.message,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                confirmButtonText: 'OK'
+                            });
+                        });
+                }
+            });
+        });
+    });
+    // <!-- Fin Validación botón desactivar -->
 
 </script>
