--- a/ADMFacturar/Views/Seguridad/Index.cshtml
+++ b/ADMFacturar/Views/Seguridad/Index.cshtml
@@ -79,9 +79,9 @@
                             </td>
                             <td>
                                 <div class="flex justify-center space-x-2">
-                                        <a asp-action="ActualizarSeguridad" asp-route-PK="@usuario.PK_IdUsuario" class="bg-blue-500 text-white px-2 py-1 rounded hover:bg-blue-600" title="Editar">
-                                        <i class="fas fa-edit"></i>
-                                    </a>
+                                        <a onclick="ActuVarUsuario('@usuario.PK_IdUsuario')" class="bg-blue-500 text-white px-2 py-1 rounded hover:bg-blue-600" title="Editar">
+                                            <i class="fa-solid fa-edit"></i>
+                                        </a>
                                     <form method="post" asp-action="DesactivarSeguridad" class="desactivar-form">
                                         <input type="hidden" name="PK_IdUsuario" value="@usuario.PK_IdUsuario">
                                             <button type="submit" class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" title="Desactivar">
@@ -164,6 +164,70 @@
             </form>
         </div>
     </div>
+
+    <!--                  Modal de Actualizar Template                        -->
+    <div id="modalActuUsuario" class="modal">
+        <div class="modal-content">
+            <form asp-action="ActualizarSeguridad" method="post" id="formupdate" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md">
+                <div class="border-b border-gray-700 pb-6">
+                    <h2 class="text-lg font-semibold leading-7 text-white">Actualizar Seguridad</h2>
+                </div>
+                <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+                    <div class="sm:col-span-2">
+                        <label for="Usuario" class="block text-sm font-medium text-gray-300">Usuario</label>
+                        <div class="mt-2">
+                            <input asp-for="Nombre" id="nombre" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                            <span asp-validation-for="Nombre" class="text-sm text-red-600"></span>
+                        </div>
+                    </div>
+                    <div class="sm:col-span-2">
+                        <label for="Correo" class="block text-sm font-medium text-gray-300">Correo</label>
+                        <div class="mt-2">
+                            <input asp-for="Correo" id="correo" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                            <span asp-validation-for="Correo" class="text-sm text-red-600"></span>
+                        </div>
+                    </div>
+                    <div class="sm:col-span-2">
+                        <label for="Contrasena" class="block text-sm font-medium text-gray-300">Contraseña</label>
+                        <div class="mt-2">
+                            <input asp-for="Contra" type="password" id="pass" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                            <span asp-validation-for="Contra" class="text-sm text-red-600"></span>
+                        </div>
+                    </div>
+                    <div class="sm:col-span-2">
+                        <label for="Rol" class="block text-sm font-medium text-gray-300">Rol</label>
+                        <div class="mt-2">
+                            <select asp-for="Rol" id="rol" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                                <option value="Administrador">Administrador</option>
+                                <option value="Usuario">Usuario</option>
+                            </select>
+                            <span asp-validation-for="Rol" class="text-sm text-red-600"></span>
+                        </div>
+                    </div>
+                    <div class="sm:col-span-2">
+                        <label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
+                        <div class="mt-2">
+                            <select asp-for="Estado" id="estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                                <option value="true">Activo</option>
+                                <option value="false">Inactivo</option>
+                            </select>
+                            <span asp-validation-for="Estado" class="text-sm text-red-600"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-6 flex justify-end gap-x-4">
+                    <input asp-for="PK_IdUsuario" id="pkUser" type="hidden" />
+                    <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
+                    <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
+                    <input asp-for="Fecha_Creacion" id="fechaCreacion" type="hidden" />
+                    <input asp-for="Fecha_Modificacion" id="fechaModificacion" type="hidden" />
+                    <button type="submit" id="btnGuardarActu" class="rounded-md bg-indigo-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus:ring-2 focus:ring-indigo-500">Guardar</button>
+                    <a asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</a>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!--                  Final Modal de Actualizar Tempalte                        -->
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -341,10 +405,132 @@
                 }
             });
         });
+
+        /*Funcion encargada de obtener y colocar los datos en la modal
+        Incorporación 8/26/24 por Joseth Araya */
+        function ActuVarUsuario(PK) {
+            console.log("Respuesta   " + PK);
+            fetch(`/Seguridad/ObtenerSeguridad?PK=${PK}`, {
+                method: 'GET'
+            })
+                .then(response => {
+                    if (response.ok) {
+                        return response.json();
+                    } else {
+                        throw new Error('Error al obtener el usuario');
+                    }
+                })
+                .then(data => {
+                    console.log('Datos del usuario:', data);
+                    //Prueba de información
+
+                    console.log('Datos del PK_IdUsuario:', data.pK_IdUsuario);
+                    console.log('Datos del Nombre:', data.nombre);
+                    console.log('Datos del Correo:', data.correo);
+                    console.log('Datos de la Contra:', data.contra);
+                    console.log('Datos del Rol:', data.rol);
+                    console.log('Datos del Estado:', data.estado);
+                    console.log('Datos del FK_Usuario_Creacion:', data.fK_Usuario_Creacion);
+                    console.log('Datos del FK_Usuario_Modificacion:', data.fK_Usuario_Modificacion);
+                    console.log('Datos de la Fecha_Creacion:', data.fecha_Creacion);
+                    console.log('Datos de la Fecha_Modificacion:', data.fecha_Modificacion);
+
+
+                    //Asignación de datos al modal
+                    document.getElementById('pkUser').value = data.pK_IdUsuario.toString();
+                    document.getElementById('nombre').value = data.nombre;
+                    document.getElementById('correo').value = data.correo;
+                    document.getElementById('pass').value = data.contra;
+                    document.getElementById('rol').value = data.rol;
+                    document.getElementById('estado').value = data.estado.toString().toLowerCase();
+                    document.getElementById('fechaCreacion').value = data.fecha_Creacion;
+                    document.getElementById('fechaModificacion').value = data.fecha_Modificacion;
+
+
+                    // Abrir el modal de actualización
+                    abrirModal('modalActuUsuario');
+                })
+                .catch(error => {
+                    // Mostrar mensaje de error con SweetAlert2 u otra forma
+                    console.error('Error:', error);
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Error',
+                        text: 'Error al obtener los datos del cliente',
+                        confirmButtonColor: '#3085d6',
+                        cancelButtonColor: '#d33',
+                        confirmButtonText: 'OK'
+                    });
+                });
+        }
+
+        /* Función para actualizar registro de cliente
+        Incorporada el 13/7/24 por Joseth Araya
+        */
+
+        document.getElementById('btnGuardarActu').addEventListener('click', function (event) {
+            event.preventDefault(); // Detener el envío normal del formulario
+
+            // Validar campos requeridos
+            var pkUsuario = document.getElementById('pkUser').value;
+            var nombre = document.getElementById('nombre').value;
+            var correo = document.getElementById('correo').value;
+            var contra = document.getElementById('pass').value;
+            var rol = document.getElementById('rol').value;
+            var estado = document.getElementById('estado').value;
+
+            if (!pkUsuario || !nombre || !correo || !contra || !rol || !estado) {
+                // Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Error',
+                    text: 'Por favor complete todos los campos requeridos.',
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'OK'
+                });
+            } else {
+                // Crear objeto FormData con los datos del formulario
+                var formData = new FormData(document.getElementById('formupdate'));
+
+                // Enviar los datos al controlador utilizando fetch
+                fetch('/Seguridad/ActualizarSeguridad', {
+                    method: 'POST',
+                    body: formData
+                })
+                    .then(response => {
+                        if (response.ok) {
+                            // Mostrar mensaje de éxito con SweetAlert2
+                            Swal.fire({
+                                icon: 'success',
+                                title: 'Actualizado Correctamente',
+                                showConfirmButton: true,
+                                confirmButtonColor: '#3085d6',
+                                confirmButtonText: 'OK'
+                            }).then((result) => {
+                                // Redirigir a la página de índice de artículos después de guardar
+                                window.location.href = '/Seguridad/Index';
+                            });
+                        } else {
+                            throw new Error('Error al guardar los datos');
+                        }
+                    })
+                    .catch(error => {
+                        // Mostrar mensaje de error con SweetAlert2
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: error.message,
+                            confirmButtonColor: '#3085d6',
+                            cancelButtonColor: '#d33',
+                            confirmButtonText: 'OK'
+                        });
+                    });
+            }
+        });
+
     </script>
     <style>
-
-
         #tablaSeguridad tbody td {
             border-bottom: none;
         }
